# apps/api/src/controllers/api/2014/ruleSectionController.ts
@@ -1,9 +1,0 @@
-import SimpleController, { containsText } from '@/controllers/simpleController'
-import RuleSection from '@/models/2014/ruleSection'
-import { NameDescQuerySchema } from '@/schemas/schemas'
-
-export default new SimpleController(RuleSection, {
-  querySchema: NameDescQuerySchema,
-  filter: ({ desc }) => (desc !== undefined ? { desc: containsText(desc) } : {}),
-  cache: true
-})
